welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: Missing closing brace `}' assumed here
override def run() {for (i<-1 to 3) {for (j<-1 to 3) {faireV(Color.YELLOW);faireV(Color.RED);faireV(Color.BLUE);faireV(Color.GREEN);avance(5)};left();avance(5)
^MethodsPicture:1: error: expected start of definition
override def run() {for (i<-1 to 3) {for (j<-1 to 3) {faireV(Color.YELLOW);faireV(Color.RED);faireV(Color.BLUE);faireV(Color.GREEN);avance(5)};left();avance(5)
         ^